--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,18 +2,21 @@ name: Nightly release
 
 on:
   schedule:
-    - cron: '0 3 * * *' # 3am UTC
+    - cron: '*/60 * * * *'
+  workflow_dispatch:
+  repository_dispatch:
+    types:
+      - Autosync-DONE
 
 jobs:
   nightly:
     runs-on: windows-latest
-    timeout-minutes: 20
 
     steps:
     - uses: actions/checkout@v3.0.2
       with:
         fetch-depth: 1
-    
+
     - name: Check for commits within the last 24 hours
       uses: AlexHolderDeveloper/CommitsWithinTime@v1.1.5
       id: commitswithintime
@@ -25,7 +28,7 @@ jobs:
       uses: microsoft/setup-msbuild@v1.1
       with:
         msbuild-architecture: x64
-    
+
     - name: Get short commit SHA
       if: steps.commitswithintime.outputs.has-new-commits-within-time != 'false'
       run: echo SHA7=$(git rev-parse --short HEAD) >> $env:GITHUB_ENV
@@ -46,10 +49,10 @@ jobs:
       if: steps.commitswithintime.outputs.has-new-commits-within-time != 'false'
       uses: WebFreak001/deploy-nightly@v1.2.0
       env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
       with:
-        upload_url: https://uploads.github.com/repos/r-ex/LegionPlus/releases/77041513/assets{?name,label}
-        release_id: 77041513
+        upload_url: https://uploads.github.com/repos/biast12/LegionPlus/releases/102559614/assets{?name,label}
+        release_id: 102559614
         asset_path: Legion+Nightly.zip
         asset_name: Legion+Nightly.zip
         asset_content_type: application/zip
@@ -61,4 +64,4 @@ jobs:
       with:
         tag_name: 'nightly'
       env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
