--- a/.github/workflows/autosync.yml
+++ b/.github/workflows/autosync.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v1.8
         with:
-          token: ${{ secrets.PERSONAL_TOKEN }}
+          github_token: ${{secrets.GITHUB_TOKEN}}
+          personal_token: ${{secrets.PERSONAL_TOKEN}}
           owner: r-ex
           base: main
           head: main
@@ -26,7 +27,7 @@ jobs:
       - name: Trigger Nightly
         uses: peter-evans/repository-dispatch@v1
         with:
-          token: ${{ secrets.PERSONAL_TOKEN }}
+          token: ${{secrets.PERSONAL_TOKEN}}
           repository: biast12/LegionPlus
           event-type: Autosync-DONE
           ref: main
