--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -49,7 +49,7 @@ jobs:
       if: steps.commitswithintime.outputs.has-new-commits-within-time != 'false'
       uses: WebFreak001/deploy-nightly@v1.2.0
       env:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with:
         upload_url: https://uploads.github.com/repos/biast12/LegionPlus/releases/102559614/assets{?name,label}
         release_id: 102559614
@@ -64,4 +64,4 @@ jobs:
       with:
         tag_name: 'nightly'
       env:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
